# weather

./: .cache.sqlite  pyproject.toml
config/: settings.py  urls.py
user/: email.py  models.py  serializer.py  urls.py  views.py
user/migrations/: 0001_initial.py
weather/: models.py  serializer.py  urls.py  views.py
weather/migrations/: 0001_initial.py  0002_alter_searchhistory_user.py
